--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@prisma/client": "^5.21.1",
     "bcrypt": "^5.1.1",
     "jose": "^5.9.6",
+    "lottie-web": "^5.12.2",
     "next": "15.0.2",
     "prisma": "^5.21.1",
     "react": "19.0.0-rc-02c0e824-20241028",
